// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicationsListSorting renders  component will set state on receiving new props 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <WithStyles(FormControl)
      fullWidth={true}
    >
      <WithStyles(WithFormControlContext(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(WithFormControlContext(InputLabel))>
      <WithStyles(WithFormControlContext(Select))
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
      >
        <WithStyles(MenuItem)
          key="0"
          value="published_date"
        >
          Published date
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="1"
          value="score"
        >
          Search relevance
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="2"
          value="title"
        >
          Title
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="3"
          value="created_date"
        >
          Created date
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="4"
          value="updated_date"
        >
          Updated date
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </WithStyles(MenuItem)>
      </WithStyles(WithFormControlContext(Select))>
    </WithStyles(FormControl)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <WithStyles(FormControl)
      fullWidth={true}
    >
      <WithStyles(WithFormControlContext(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(WithFormControlContext(InputLabel))>
      <WithStyles(WithFormControlContext(Select))
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
      >
        <WithStyles(MenuItem)
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(MenuItem)>
      </WithStyles(WithFormControlContext(Select))>
    </WithStyles(FormControl)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    md={4}
    sm={12}
    xs={12}
  >
    <WithStyles(FormControl)
      fullWidth={true}
    >
      <WithStyles(WithFormControlContext(InputLabel))
        shrink={true}
      >
        Records per page
      </WithStyles(WithFormControlContext(InputLabel))>
      <WithStyles(WithFormControlContext(Select))
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
      >
        <WithStyles(MenuItem)
          key="records-per-page-5"
          value={5}
        >
          5
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(MenuItem)>
      </WithStyles(WithFormControlContext(Select))>
    </WithStyles(FormControl)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`PublicationsListSorting renders  component will set state on receiving new props 2`] = `
<WithStyles(Grid)
  container={true}
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <WithStyles(FormControl)
      fullWidth={true}
    >
      <WithStyles(WithFormControlContext(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(WithFormControlContext(InputLabel))>
      <WithStyles(WithFormControlContext(Select))
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="Publication date"
      >
        <WithStyles(MenuItem)
          key="0"
          value="published_date"
        >
          Published date
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="1"
          value="score"
        >
          Search relevance
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="2"
          value="title"
        >
          Title
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="3"
          value="created_date"
        >
          Created date
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="4"
          value="updated_date"
        >
          Updated date
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </WithStyles(MenuItem)>
      </WithStyles(WithFormControlContext(Select))>
    </WithStyles(FormControl)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <WithStyles(FormControl)
      fullWidth={true}
    >
      <WithStyles(WithFormControlContext(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(WithFormControlContext(InputLabel))>
      <WithStyles(WithFormControlContext(Select))
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="test"
      >
        <WithStyles(MenuItem)
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(MenuItem)>
      </WithStyles(WithFormControlContext(Select))>
    </WithStyles(FormControl)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    md={4}
    sm={12}
    xs={12}
  >
    <WithStyles(FormControl)
      fullWidth={true}
    >
      <WithStyles(WithFormControlContext(InputLabel))
        shrink={true}
      >
        Records per page
      </WithStyles(WithFormControlContext(InputLabel))>
      <WithStyles(WithFormControlContext(Select))
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={5}
      >
        <WithStyles(MenuItem)
          key="records-per-page-5"
          value={5}
        >
          5
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(MenuItem)>
      </WithStyles(WithFormControlContext(Select))>
    </WithStyles(FormControl)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`PublicationsListSorting renders  component with empty paging data 1`] = `
<span
  className="publicationsListSorting empty"
/>
`;

exports[`PublicationsListSorting renders  component with export dropdown for admin or author 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <WithStyles(FormControl)
      fullWidth={true}
    >
      <WithStyles(WithFormControlContext(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(WithFormControlContext(InputLabel))>
      <WithStyles(WithFormControlContext(Select))
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
      >
        <WithStyles(MenuItem)
          key="0"
          value="published_date"
        >
          Published date
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="1"
          value="score"
        >
          Search relevance
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="2"
          value="title"
        >
          Title
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="3"
          value="created_date"
        >
          Created date
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="4"
          value="updated_date"
        >
          Updated date
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </WithStyles(MenuItem)>
      </WithStyles(WithFormControlContext(Select))>
    </WithStyles(FormControl)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <WithStyles(FormControl)
      fullWidth={true}
    >
      <WithStyles(WithFormControlContext(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(WithFormControlContext(InputLabel))>
      <WithStyles(WithFormControlContext(Select))
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
      >
        <WithStyles(MenuItem)
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(MenuItem)>
      </WithStyles(WithFormControlContext(Select))>
    </WithStyles(FormControl)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    md={3}
    sm={6}
    xs={12}
  >
    <WithStyles(FormControl)
      fullWidth={true}
    >
      <WithStyles(WithFormControlContext(InputLabel))
        shrink={true}
      >
        Records per page
      </WithStyles(WithFormControlContext(InputLabel))>
      <WithStyles(WithFormControlContext(Select))
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
      >
        <WithStyles(MenuItem)
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(MenuItem)>
      </WithStyles(WithFormControlContext(Select))>
    </WithStyles(FormControl)>
  </WithStyles(Grid)>
  <Hidden
    implementation="js"
    lgDown={false}
    lgUp={false}
    mdDown={false}
    mdUp={false}
    smDown={false}
    smUp={false}
    xlDown={false}
    xlUp={false}
    xsDown={true}
    xsUp={false}
  >
    <WithStyles(Grid)
      item={true}
      md={3}
      sm={6}
    >
      <ExportPublications
        disabled={false}
        onChange={[Function]}
      />
    </WithStyles(Grid)>
  </Hidden>
</WithStyles(Grid)>
`;

exports[`PublicationsListSorting renders  component with export dropdown hidden 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <WithStyles(FormControl)
      fullWidth={true}
    >
      <WithStyles(WithFormControlContext(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(WithFormControlContext(InputLabel))>
      <WithStyles(WithFormControlContext(Select))
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
      >
        <WithStyles(MenuItem)
          key="0"
          value="published_date"
        >
          Published date
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="1"
          value="score"
        >
          Search relevance
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="2"
          value="title"
        >
          Title
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="3"
          value="created_date"
        >
          Created date
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="4"
          value="updated_date"
        >
          Updated date
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </WithStyles(MenuItem)>
      </WithStyles(WithFormControlContext(Select))>
    </WithStyles(FormControl)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <WithStyles(FormControl)
      fullWidth={true}
    >
      <WithStyles(WithFormControlContext(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(WithFormControlContext(InputLabel))>
      <WithStyles(WithFormControlContext(Select))
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
      >
        <WithStyles(MenuItem)
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(MenuItem)>
      </WithStyles(WithFormControlContext(Select))>
    </WithStyles(FormControl)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    md={4}
    sm={12}
    xs={12}
  >
    <WithStyles(FormControl)
      fullWidth={true}
    >
      <WithStyles(WithFormControlContext(InputLabel))
        shrink={true}
      >
        Records per page
      </WithStyles(WithFormControlContext(InputLabel))>
      <WithStyles(WithFormControlContext(Select))
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
      >
        <WithStyles(MenuItem)
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(MenuItem)>
      </WithStyles(WithFormControlContext(Select))>
    </WithStyles(FormControl)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`PublicationsListSorting renders  component with non-empty paging data 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <WithStyles(FormControl)
      fullWidth={true}
    >
      <WithStyles(WithFormControlContext(InputLabel))
        shrink={true}
      >
        Sort results by
      </WithStyles(WithFormControlContext(InputLabel))>
      <WithStyles(WithFormControlContext(Select))
        disabled={false}
        id="sortBy"
        onChange={[Function]}
        value="published_date"
      >
        <WithStyles(MenuItem)
          key="0"
          value="published_date"
        >
          Published date
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="1"
          value="score"
        >
          Search relevance
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="2"
          value="title"
        >
          Title
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="3"
          value="created_date"
        >
          Created date
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="4"
          value="updated_date"
        >
          Updated date
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="5"
          value="altmetric_score"
        >
          Altmetric score
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="6"
          value="scopus_citation_count"
        >
          Scopus citation count
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="7"
          value="thomson_citation_count"
        >
          Web of Science citation count
        </WithStyles(MenuItem)>
      </WithStyles(WithFormControlContext(Select))>
    </WithStyles(FormControl)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    md={4}
    sm={6}
    xs={12}
  >
    <WithStyles(FormControl)
      fullWidth={true}
    >
      <WithStyles(WithFormControlContext(InputLabel))
        shrink={true}
      >
        Sort order
      </WithStyles(WithFormControlContext(InputLabel))>
      <WithStyles(WithFormControlContext(Select))
        disabled={false}
        id="sortOrder"
        onChange={[Function]}
        value="Desc"
      >
        <WithStyles(MenuItem)
          key="0"
          value="Desc"
        >
          Desc
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="1"
          value="Asc"
        >
          Asc
        </WithStyles(MenuItem)>
      </WithStyles(WithFormControlContext(Select))>
    </WithStyles(FormControl)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    md={4}
    sm={12}
    xs={12}
  >
    <WithStyles(FormControl)
      fullWidth={true}
    >
      <WithStyles(WithFormControlContext(InputLabel))
        shrink={true}
      >
        Records per page
      </WithStyles(WithFormControlContext(InputLabel))>
      <WithStyles(WithFormControlContext(Select))
        disabled={false}
        id="pageSize"
        onChange={[Function]}
        value={20}
      >
        <WithStyles(MenuItem)
          key="records-per-page-20"
          value={20}
        >
          20
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="records-per-page-50"
          value={50}
        >
          50
        </WithStyles(MenuItem)>
        <WithStyles(MenuItem)
          key="records-per-page-100"
          value={100}
        >
          100
        </WithStyles(MenuItem)>
      </WithStyles(WithFormControlContext(Select))>
    </WithStyles(FormControl)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;
